# syster-base

./: CHANGELOG.md  Cargo.toml
docs/: grammar-gaps.adoc
src/hir/: diagnostics.rs  resolve.rs
src/hir/symbols/: extract_definition.rs  extract_leaf.rs  extract_package.rs  extract_special.rs  extract_usage.rs  helpers.rs  types.rs
src/ide/: completion.rs  goto.rs  hover.rs  references.rs  semantic_tokens.rs  symbols.rs  type_info.rs
src/interchange/: decompile.rs  integrate.rs  jsonld.rs  model.rs  render.rs  xmi.rs
src/parser/: parser.rs
src/parser/ast/: elements.rs  namespace.rs  relationships.rs
src/parser/grammar/kerml/: entry.rs
src/parser/grammar/kerml_expressions/: atoms.rs  mod.rs
src/parser/grammar/sysml/: connectors.rs  definitions.rs  entry.rs  mod.rs  namespace.rs  requirements.rs  states.rs  usage.rs
src/syntax/: mod.rs  normalized.rs
src/syntax/formatter/: mod.rs
tests/: test_quick_hover_triage.rs  test_xmi_format_compliance.rs  test_xmi_roundtrip_phase1.rs  test_xmi_roundtrip_phase5.rs  tests_parser_behavioral.rs  tests_parser_definitions.rs  tests_parser_expressions.rs  tests_parser_requirements.rs  tests_parser_usages.rs  tests_parser_views.rs  tests_resolve_subsetting.rs  tests_semantic_false_positives.rs  tests_semantic_resolution.rs  tests_sysml_examples.rs
tests/hir/: tests_symbol_extraction.rs  tests_type_refs.rs
tests/parser/: tests_expression_rowan.rs
tests/sysml-examples/Simple Tests/: ConstraintInvocationTest.sysml
