[package]
name = "syster-base"
version = "0.4.1-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["jade-codes"]
license = "MIT"
repository = "https://github.com/jade-codes/syster-base"
description = "Core library for SysML v2 and KerML parsing, AST, and semantic analysis"

[lib]
name = "syster"
path = "src/lib.rs"

[features]
default = []
interchange = ["dep:quick-xml", "dep:zip", "dep:serde", "dep:serde_json", "dep:serde_yaml"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
from-pest = "0.3"
pest-ast = "0.3"
rayon = "1.10"
unicode-ident = "1.0"
rowan = "0.16.1"
logos = "0.15"
tokio-util = "0.7"
tracing = "0.1.44"
text-size = "1.1.1"
smol_str = "0.3.2"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"
salsa = "0.18"
thiserror = "2"
indexmap = "2"
uuid = { version = "1", features = ["v4"] }

# Interchange format support (optional)
quick-xml = { version = "0.37", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
once_cell = "1.21.3"
rstest = "0.25"
tempfile = "3.24.0"
walkdir = "2"

# Examples temporarily disabled
# [[example]]
# name = "check_xmi_diff"
# required-features = ["interchange"]

# [[example]]
# name = "test_decompile"
# required-features = ["interchange"]

# [[example]]
# name = "test_jsonld_roundtrip"
# required-features = ["interchange"]

# [[example]]
# name = "test_official_xmi"
# required-features = ["interchange"]

# [[example]]
# name = "test_roundtrip"
# required-features = ["interchange"]

# [[example]]
# name = "test_roundtrip_all"
# required-features = ["interchange"]
